# arxiv_collector

./: .gitignore  README.md  collect.py  collector.py  preprocessing.py  pyproject.toml  setup.py
arxiv_collector/: collect.py  collector.py  preprocessing.py
src/arxiv_collector/: collect.py  collector.py  preprocessing.py
