[tool.poetry]
name = "arxiv_collector"
version = "0.1.0"
description = "A package to collect abstracts from arxiv.org"
authors = ["Kit Lee <wklee4993@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.9, <3.11"
beautifulsoup4 = "^4.11.1"
pandas = "^1.4.2"
numpy = "^1.22.3"
click = "^8.1.2"
pandas-stubs = "^1.2.0"
pyarrow = "^7.0.0"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
isort = "^5.10.1"
flake8 = "^4.0.1"
mypy = "^0.942"
pytest = "^7.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"

